--- a/views/pages/clientes/form.ejs
+++ b/views/pages/clientes/form.ejs
@@ -4,7 +4,7 @@
 
 <section class="section">
     <div class="container">
-      <h1 class="title">Lista de Clientes e Fornecedores</h1>
+      <h1 class="title">Lista de Clientes</h1>
       <div class="field">
         <label class="label">Buscar</label>
         <div class="control">
